# svd-quantum-dynamics

./: .gitignore  AUTHORS  CITATION  Makefile  pyproject.toml  svd-quantum-dynamics.ipynb
utils/: blogutils.py  wp_friendly_notebook.py
